# harlequin-athena

./: .gitignore  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: README.md  ci.yml  publish.yml
src/harlequin_athena/: __init__.py  adapter.py  cli_options.py  completions.py
tests/: test_adapter.py
