[tool.poetry]
name = "harlequin-athena"
version = "0.1.2"
description = "A Harlequin adapter for Amazon Athena."
authors = ["Jacob Williams <jacob@iakob.com>"]
homepage = "https://harlequin.sh"
repository = "https://github.com/singlow/harlequin-athena"
documentation = "https://github.com/singlow/harlequin-athena"
license = "MIT"
readme = "README.md"
keywords = ["harlequin", "athena", "aws", "sql", "database", "adapter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "harlequin_athena", from = "src" },
]

[tool.poetry.plugins."harlequin.adapter"]
athena = "harlequin_athena:HarlequinAthenaAdapter"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
harlequin = ">=1.7,<3"
pyathena = "^3.0.0"
boto3 = "^1.34.0"
numpy = "^2.2.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pytest = "^7.4.3"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
importlib_metadata = { version = ">=4.6.0", python = "<3.10.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = ["A", "B", "E", "F", "I"]
target-version = "py38"

[tool.mypy]
python_version = "3.8"
files = [
    "src/**/*.py",
    "tests/**/*.py",
]
mypy_path = "src:stubs"

show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# be strict
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
strict_optional = true

warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["pyathena", "pyathena.dbapi"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "aws_required: marks tests as requiring AWS credentials (deselect with '-m \"not aws_required\"')",
    "no_aws: marks tests that can run without AWS credentials (deselect with '-m \"no_aws\"')",
]

